fully working but confusing - going to restructure

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,2 +1,4 @@
-@import './styles/productListItem';
 @import './styles/app';
+@import './styles/productListItem';
+@import './styles/adminAddProduct';
+@import './styles/navigation';
