--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -52,6 +52,15 @@
         a {
             color: black;
         }
+        p{
+            margin: 0;
+        }
+
+        &__linksContainer{
+            display: flex;
+            justify-content: space-between;
+            width: 50%;
+        }
 
         .activeNav {
             color: blue;
