fully working - before pages conversion

--- a/src/styles/_adminAddProduct.scss
+++ b/src/styles/_adminAddProduct.scss
@@ -1,7 +1,13 @@
 
 
 .productAdderForm{
-    label{
-        min-width: 200px;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    div{
+        display: flex;
+        flex-direction: column;
+        width: 32%;
     }
 }
