--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -1,4 +1,18 @@
+body{
+    background-color: #333333;
+    color: white;
+}
+
+
 .app{
     max-width: 1200px;
     margin: 0 auto;
+    box-sizing: border-box;
+    padding: 0 1em;
+}
+button{
+    border: none;
+    background-color: transparent;
+    color: white;
+    padding: 0;
 }
