--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import './styles/app';
+@import './styles/universalStyles';
 @import './styles/productListItem';
 @import './styles/adminAddProduct';
 @import './styles/navigation';
