pages working and grid using

--- a/src/styles/_productListItem.scss
+++ b/src/styles/_productListItem.scss
@@ -1,25 +1,30 @@
 
 .productListings{
     &__list{
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 1em;
+        grid-auto-rows: minmax(200px, auto);
     }
 }
 
 .productListItem{
-    width: 32%;
+    // width: 32%;
     padding: 1em;
     box-sizing: border-box;
     background-color: #2b2a2a;
-    margin-bottom: 2%;
 
     a{
         color: white;
         text-decoration: none;
+        // margin-top: 3px;
 
         &:hover{
             color: rgb(95, 95, 134);
+        }
+
+        p{
+            // margin-top: 5em;
         }
     }
 }
