--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -44,15 +44,19 @@
     }
     .basketWidget{
         background-color: grey;
-        border-radius: 5px;
+        border-radius: 2px;
         padding: 1em;
         box-sizing: border-box;
+
+        h1{
+            margin: 0;
+        }
     }
     .basketWidgetContainer{
         opacity: 0;
         position: absolute;
         right: 2%;
-        transform: translate(200%);
+        transform: translateY(-200%);
         transition: .5s ease all;
     }
     .show{
@@ -68,6 +72,7 @@
         justify-content: space-between;
         padding: 1em;
         box-sizing: border-box;
+        position: relative;
 
         a {
             color: rgb(170, 170, 170);
