--- a/src/styles/_productListItem.scss
+++ b/src/styles/_productListItem.scss
@@ -1,30 +1,71 @@
-
-.productListings{
-    &__list{
+.productListings {
+    &__list {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         gap: 1em;
         grid-auto-rows: minmax(200px, auto);
+        // align-items: flex-end;
     }
 }
 
-.productListItem{
+.productListItem {
     // width: 32%;
-    padding: 1em;
     box-sizing: border-box;
     background-color: #2b2a2a;
+    // display: grid;
+    // align-content: end;
+    color: white;
+    text-decoration: none;
 
-    a{
-        color: white;
+    width: 100%;
+    height: 100%;
+    transition: .1s ease all;
+
+    background-size: 100%;
+    background-position: 50%;
+    background-origin: center center;
+
+    .layer {
+        background-color: rgba(0, 0, 0, 0.452);
+        height: 100%;
+        width: 100%;
+        padding: 1em;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+        transition: .2s ease all;
+
+        &:hover {
+            background-color: rgba(0, 0, 0, 0.137);
+        }
+    }
+
+
+
+
+
+
+    h1 {
+        margin: 0 0 .25em;
+    }
+
+    p {
+        margin: 0em;
+    }
+
+    &__bottom {
+        display: flex;
+        justify-content: space-between;
+
+        svg {
+            margin: 0 .3em;
+        }
+    }
+
+    a {
+        color: rgb(243, 243, 243);
         text-decoration: none;
-        // margin-top: 3px;
-
-        &:hover{
-            color: rgb(95, 95, 134);
-        }
-
-        p{
-            // margin-top: 5em;
-        }
+        text-shadow: 1px 1px 10px black;
     }
 }
