--- a/src/App.scss
+++ b/src/App.scss
@@ -3,3 +3,5 @@
 @import './styles/productListItem';
 @import './styles/adminAddProduct';
 @import './styles/navigation';
+@import './styles/audioPlayer';
+@import './styles/footer';
