--- a/src/App.scss
+++ b/src/App.scss
@@ -5,3 +5,5 @@
 @import './styles/navigation';
 @import './styles/audioPlayer';
 @import './styles/footer';
+@import './styles/productPage';
+@import './styles/listItemsSmall';
