--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -11,8 +11,12 @@ body{
     padding: 0 1em;
 }
 button{
-    border: none;
     background-color: transparent;
     color: white;
     padding: 0;
+}
+
+h1{
+    // border-bottom: 1px solid rgba(177, 177, 177, 0.363);
+    margin-bottom: 1em;
 }
