--- a/src/styles/_app.scss
+++ b/src/styles/_app.scss
@@ -9,6 +9,7 @@ body{
     margin: 0 auto;
     box-sizing: border-box;
     padding: 0 1em;
+    margin-bottom: 10em;
 }
 button{
     background-color: transparent;
