seekbar working - not clickable yet

--- a/src/styles/_audioPlayer.scss
+++ b/src/styles/_audioPlayer.scss
@@ -48,6 +48,7 @@
     height: 5px;
     background-color: grey;
     cursor: pointer;
+    position: relative;
 
     .fill{
         background-color: white;
