--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -1,5 +1,6 @@
 @media(max-width: 999px) {
     .navBar {
+        display: none;
         position: absolute;
         width: 100%;
         height: 100%;
