--- a/src/styles/_productListItem.scss
+++ b/src/styles/_productListItem.scss
@@ -1,13 +1,33 @@
 .productListings {
     &__list {
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        gap: 1em;
-        grid-auto-rows: minmax(200px, auto);
-        // align-items: flex-end;
+        
     }
 }
 
+@media(min-width: 850px){
+    .productListings {
+        &__list {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            gap: 1em;
+            grid-auto-rows: minmax(200px, auto);
+            // align-items: flex-end;
+        }
+    }
+}
+@media(max-width: 850px){
+    .productListItem{
+        margin-bottom: 5%;
+        min-height: 200px;
+        position: relative;
+
+
+        .layer{
+            height: 100%;
+            position: absolute;
+        }
+    }
+}
 .productListItem {
     // width: 32%;
     box-sizing: border-box;
@@ -40,11 +60,6 @@
             background-color: rgba(0, 0, 0, 0.137);
         }
     }
-
-
-
-
-
 
     h1 {
         margin: 0 0 .25em;
