--- a/src/styles/_navigation.scss
+++ b/src/styles/_navigation.scss
@@ -1,45 +1,45 @@
-@media(max-width: 999px) {
-    .navBar {
-        display: none;
-        position: absolute;
-        width: 100%;
-        height: 100%;
-        background: rgb(50, 49, 63);
-        top: 0;
-        transition: .5s ease all;
-        left: 100%;
+// @media(max-width: 999px) {
+//     .navBar {
+//         display: none;
+//         position: absolute;
+//         width: 100%;
+//         height: 100%;
+//         background: rgb(50, 49, 63);
+//         top: 0;
+//         transition: .5s ease all;
+//         left: 100%;
 
-        &.show {
-            transform: translateX(-100%);
-        }
+//         &.show {
+//             transform: translateX(-100%);
+//         }
 
-        a {
-            color: white;
-        }
+//         a {
+//             color: white;
+//         }
 
-        &__linksContainer {
-            display: flex;
-            flex-direction: column;
-            height: 100%;
-            justify-content: space-around;
-            text-align: center;
+//         &__linksContainer {
+//             display: flex;
+//             flex-direction: column;
+//             height: 100%;
+//             justify-content: space-around;
+//             text-align: center;
 
-            a {
-                text-decoration: none;
-                font-size: 2em;
-            }
-        }
-    }
+//             a {
+//                 text-decoration: none;
+//                 font-size: 2em;
+//             }
+//         }
+//     }
 
-    .navMobIcon {
-        position: absolute;
-        left: 1px;
-        top: 1px;
-        z-index: 3;
-    }
-}
+//     .navMobIcon {
+//         position: absolute;
+//         left: 1px;
+//         top: 1px;
+//         z-index: 3;
+//     }
+// }
 
-@media(min-width: 1000px) {
+@media(min-width: 300px) {
     .navBarContainer{
         background-color: rgb(50, 49, 63);
         border-bottom: 1px solid rgb(60, 60, 63);
