fixed liked page styling

--- a/src/styles/_audioPlayer.scss
+++ b/src/styles/_audioPlayer.scss
@@ -76,3 +76,12 @@
 #volumeSlider{
   display: none;
 }
+
+// @supports (-webkit-touch-callout: none) {
+//   .iosAudioToggle{
+//     display: block;
+//   }
+// }
+// .iosAudioToggle{
+//   display: none;
+// }
