--- a/src/styles/_listItemsSmall.scss
+++ b/src/styles/_listItemsSmall.scss
@@ -1,22 +1,38 @@
-.ListItemsSmall{
-    color: white;
-    margin-bottom: 1em;
+.ListItemsSmall {
+  color: white;
+  margin-bottom: 1em;
+  background-color: #1f1f1f;
+  border-radius: 10px;
+  padding: 1em;
 
-    .layer{
+  .layer {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+    &__left {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+    &__right {
         display: flex;
-        flex-direction: row;
-        justify-content: space-between;
+        justify-content: space-around;
+      img {
+        width: 100%;
+        max-width: 300px;
+      }
+    }
+    div {
+      width: 50%;
+    }
+  }
 
-        &__left{
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-    }
-    img{
-        width: 18%;
-    }
-    a{
-        color: white;
-    }
+  h1 {
+    margin: 0;
+  }
+
+  a {
+    color: white;
+  }
 }
