--- a/src/App.scss
+++ b/src/App.scss
@@ -1,9 +1,47 @@
-@import './styles/app';
-@import './styles/universalStyles';
-@import './styles/productListItem';
-@import './styles/adminAddProduct';
-@import './styles/navigation';
-@import './styles/audioPlayer';
-@import './styles/footer';
-@import './styles/productPage';
-@import './styles/listItemsSmall';
+@import './styles/test';
+
+
+
+
+body{
+    background-color: #333333;
+    color: white;
+}
+
+.app{
+    max-width: 1200px;
+    margin: 0 auto;
+    box-sizing: border-box;
+    padding: 1em;
+    margin-bottom: 10em;
+}
+button{
+    background-color: transparent;
+    color: white;
+    padding: 0;
+}
+
+input{
+    background-color: #636363;
+    border: none;
+    color: white;
+
+    &::placeholder{
+        color: white;
+    }
+}
+
+.cta{
+    &__blue{
+        border: none;
+        border-radius: 5px;
+        padding: 1em;
+        background-color: rgb(7, 7, 27);
+        transition: .2s ease all;
+
+        &:hover{
+            background-color: white;
+            color: black;
+        }
+    }
+}
