--- a/src/components/tracks/trackItem/trackItem.scss
+++ b/src/components/tracks/trackItem/trackItem.scss
@@ -1,33 +1,3 @@
-.productListings {
-    &__list {
-        
-    }
-}
-
-@media(min-width: 850px){
-    .productListings {
-        &__list {
-            display: grid;
-            grid-template-columns: repeat(3, 1fr);
-            gap: 1em;
-            grid-auto-rows: minmax(200px, auto);
-            // align-items: flex-end;
-        }
-    }
-}
-@media(max-width: 850px){
-    .productListItem{
-        margin-bottom: 5%;
-        min-height: 200px;
-        position: relative;
-
-
-        .layer{
-            height: 100%;
-            position: absolute;
-        }
-    }
-}
 .productListItem {
     // width: 32%;
     box-sizing: border-box;
@@ -39,7 +9,7 @@
 
     width: 100%;
     height: 100%;
-    transition: .1s ease all;
+    transition: 0.1s ease all;
 
     background-size: 100%;
     background-position: 50%;
@@ -54,7 +24,7 @@
         display: flex;
         flex-direction: column;
         justify-content: flex-end;
-        transition: .2s ease all;
+        transition: 0.2s ease all;
 
         &:hover {
             background-color: rgba(0, 0, 0, 0.137);
@@ -62,7 +32,7 @@
     }
 
     h1 {
-        margin: 0 0 .25em;
+        margin: 0 0 0.25em;
     }
 
     p {
@@ -74,7 +44,7 @@
         justify-content: space-between;
 
         svg {
-            margin: 0 .3em;
+            margin: 0 0.3em;
         }
     }
 
@@ -84,3 +54,4 @@
         text-shadow: 1px 1px 10px black;
     }
 }
+
