--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,4 @@
-@import './styles/test';
+@import './styles/variables';
 
 
 
@@ -13,7 +13,6 @@ body{
     margin: 0 auto;
     box-sizing: border-box;
     padding: 1em;
-    margin-bottom: 10em;
 }
 button{
     background-color: transparent;
