--- a/src/components/audioPlayer/audioPlayer.scss
+++ b/src/components/audioPlayer/audioPlayer.scss
@@ -14,6 +14,12 @@
   transform: translatey(00%);
   opacity: 1;
 }
+.playerToggle{
+  position: absolute;
+  right: 5%;
+  top: -25%;
+  background-color: blue;
+}
 
 .audioPlayerLayout {
   display: flex;
