--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -7,10 +7,58 @@
 @media(min-width: 701px){
     .homePageContainer{
         .hero{
-           
+            margin: 3em 0;
+            display: grid;
+            grid-template-columns: repeat(2, 5fr);
+            // gap: 3em;
+            // grid-auto-rows: minmax(200px, auto);
             .widget__large{
-                width: 47%;
+                // width: 47%;
+                min-height: 400px;
             }
         }
     }
+}
+
+.widget{
+    &__large{
+        background-size: 100% 100%;
+        position: relative;
+        background-color: black;
+        transition: .2s ease all;
+
+        h1{
+            z-index: 1;
+        }
+
+        &::after{
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 1);
+            z-index: -1;
+        }
+        &:hover{
+            transform: scale(1.1);
+            &::after{
+                background-color: rgba(0, 0, 0, .4);
+            }
+        }
+    }
+    // &__Mixes{
+    //     background-image: url('../../imgs/home/blacksand.jpg');
+    // }
+    // &__Tracks{
+    //     background-image: url('../../imgs/home/blue.jpg');
+    // }
+    // &__Artists{
+    //     background-image: url('../../imgs/home/white.jpg');
+    // }
+    // &__Labels{
+    //     background-image: url('../../imgs/home/redblue.jpg');
+    // }
+
 }
